# gpt-transcription

./: .gitignore  AGENT.md  Cargo.toml  README.md  creds.env.example  dictate.sh  extract_creds.sh  ptt.py  record.sh  test_mic.py  transcribe.py  transcribe.sh
legacy/: ptt.py  record.sh  requirements.txt  transcribe.sh
src/: audio.rs  config.rs  cues.rs  hotkey.rs  main.rs  menu.rs  paste.rs  transcribe.rs
