[package]
name = "ptt"
version = "0.3.2"
edition = "2021"

[dependencies]
rquest = { package = "wreq", version = "5.3", features = ["multipart", "json"] }
rquest-util = { package = "wreq-util", version = "2.2.6" }
tokio = { version = "1", features = ["rt"] }
serde_json = "1"
dialoguer = "0.11"
console = "0.15"
cpal = "0.16"
core-graphics = "0.24"
ctrlc = "3"
atty = "0.2"

[dev-dependencies]
tempfile = "3"
